# animation_project

./: CMakeLists.txt  README.md
include/: gold.h
src/: gold.cpp  main.cpp
